Fix git log text incorrectly wrapped
This should be treated as preformatted text.

Fixes #61

--- a/resources/public/css/vivd.css
+++ b/resources/public/css/vivd.css
@@ -57,6 +57,7 @@ td.git .git-subject-rest {
   transform: translateX(2em);
   transition: margin-top 0.6s, max-height 0.6s;
   overflow: hidden;
+  white-space: pre;
 }
 
 td.git .closed .git-commit-text {
